--- a/src/appconfig.json
+++ b/src/appconfig.json
@@ -3,7 +3,7 @@
 	"description": "Clock display for seeing seconds/ms",
 	"appUrl": "./index.html",
 	"configUrl": "./appconfig.json",
-	"iconUrl": "https://runescape.wiki/w/File:Oak_clock.png",
+	"iconUrl": "https://toppng.com/uploads/preview/clock-icon-11549400391pbvixkhmo1.png",
 	"defaultWidth": 300,
 	"defaultHeight": 50,
 	"minWidth": 300,
